# personalized_search_engine

./: .env  .gitignore  .pre-commit-config.yaml  README.md  app.py  main.py  models.py  pyproject.toml  pyrightconfig.json  requirements.txt  run.sh  start.sh
docs/: git_guidelines.md
elastic/: start.sh
src/: elastic_utils.py  embedding.py  indexing.py  mappings.py  metrics.py  models.py  spotipy_utils.py  user_profile.py  utils.py
static/: styles.css
static/js/: dashboard.js  metadata.js  player.js  search.js  top-items.js  tracking.js
templates/: base.html  dashboard.html  index.html  login.html  register.html
