[project]
name = "elastic-start-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "elasticsearch>=8.17.2",
    "flask>=3.1.0",
    "flask_sqlalchemy",
    "flask_login",
]

[tool.uv]
dev-dependencies = [
    "black",
    "isort",
    "pre-commit",
    "pyright",
    "types-Flask"
]
