[project]
name = "elastic-start-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv==1.1.0",
    "elasticsearch==8.17.2",
    "flask==3.1.0",
    "flask-sqlalchemy==3.1.1",
    "flask-login==0.6.3",
    "spotipy==2.25.1",
    "ijson==3.3.0",
    "blinker==1.9.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "elastic-transport==8.17.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "redis==5.2.1",
    "requests==2.32.3",
    "sqlalchemy==2.0.40",
    "typing-extensions==4.13.1",
    "urllib3==2.3.0",
    "werkzeug==3.1.3",
]

[tool.uv]
dev-dependencies = [
    "black",
    "isort",
    "pre-commit",
    "pyright",
    "types-Flask",
]
